src/objects/bupl__BusinessPlan_Item__c.object
<CustomObject>
    <fields>
        <fullName>bupl__annual_expect_profit_py_amount__c</fullName>
        <label>Last year current year expected revenues</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>bupl__customer_open_oppy_amount__c</fullName>
        <label>Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>bupl__expected_profit_2py_amount__c</fullName>
        <label>Before Last Year Revenues</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>bupl__expected_revenue_amount__c</fullName>
        <label>Current year expected revenues</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>bupl__gf_booking_operation_cntry_id__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arab Emirates</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Holding</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Panama</fullName>
                </value>
                <value>
                    <fullName>Paraguay</fullName>
                </value>
                <value>
                    <fullName>Peru</fullName>
                </value>
                <value>
                    <fullName>Philippines</fullName>
                </value>
                <value>
                    <fullName>Portugal</fullName>
                </value>
                <value>
                    <fullName>Puerto Rico</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>South Korea</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
                <value>
                    <fullName>Thailand</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bupl__gf_business_plan_version_id__c</fullName>
        <label>Business Plan Version</label>
        <referenceTo>bupl__BusinessPlan_Version__c</referenceTo>
        <relationshipLabel>Business Plan Items</relationshipLabel>
        <relationshipName>BusinessPlan_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>bupl__gf_business_plan_vldt_ind_type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bupl__gf_cross_border_rev_ind_type__c</fullName>
        <label>Cross Border</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bupl__gf_cross_sell_rev_ind_type__c</fullName>
        <label>Cross Sell</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bupl__gf_expct_rev_growth_nxy_per__c</fullName>
        <formula>(bupl__pre_expct_prft_next_12m_amount__c - bupl__expected_revenue_amount__c) / bupl__expected_revenue_amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NY/CY YOY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>bupl__gf_total_revenues_ytd_amount__c</fullName>
        <label>Current Year Revenues</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>bupl__participant_id__c</fullName>
        <formula>HYPERLINK( &quot;/lightning/r/Account/&quot; + bupl__gf_business_plan_version_id__r.bupl__gf_business_plan_id__r.bupl__participant_id__r.Id + &quot;/view&quot;, bupl__gf_business_plan_version_id__r.bupl__gf_business_plan_id__r.bupl__participant_id__r.Name,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bupl__pre_expct_prft_next_12m_amount__c</fullName>
        <label>Next year expected revenues</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>bupl__solution_category_desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bupl__solution_category_id__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GF</fullName>
                </value>
                <value>
                    <fullName>GM</fullName>
                </value>
                <value>
                    <fullName>GTB</fullName>
                </value>
                <value>
                    <fullName>CF</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bupl__solution_name_path_desc__c</fullName>
        <formula>TEXT(bupl__solution_category_id__c) + &apos;-&apos; + bupl__solution_category_desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bupl__total_revenues_py_amount__c</fullName>
        <label>Last Year Revenues</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Business Plan Item</label>
    <nameField>
        <displayFormat>BPI-{000000}</displayFormat>
        <label>Business Plan Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Plan Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>